[gd_scene load_steps=15 format=1]

[ext_resource path="res://Levels/level.gd" type="Script" id=1]
[ext_resource path="res://Levels/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Levels/gui.gd" type="Script" id=3]
[ext_resource path="res://gui.png" type="Texture" id=4]
[ext_resource path="res://Xolonium-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Player/SquadMember_granade.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/SquadTurret.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/SquadShield.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/data_nexus.gd" type="Script" id=9]
[ext_resource path="res://Player/nexus.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[sub_resource type="DynamicFont" id=4]

font/size = 128
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="level" type="Node"]

script/script = ExtResource( 1 )
max_AP = 10

[node name="room" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="room"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = true
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 4
collision/mask = 15
occluder/light_mask = 1
tile_data = IntArray( -131075, 0, -131074, 0, -131073, 0, -196608, 0, -196607, 0, -196606, 0, -196605, 0, -196604, 0, -196603, 0, -196602, 0, -196601, 0, -196600, 0, -196599, 0, -196598, 0, -196597, 0, -196596, 0, -196595, 0, -196594, 0, -65539, 0, -65538, 1, -65537, 1, -131072, 1, -131071, 1, -131070, 1, -131069, 1, -131068, 1, -131067, 1, -131066, 1, -131065, 1, -131064, 1, -131063, 1, -131062, 1, -131061, 1, -131060, 1, -131059, 1, -131058, 0, -3, 0, -2, 1, -1, 1, -65536, 1, -65535, 1, -65534, 1, -65533, 1, -65532, 1, -65531, 1, -65530, 1, -65529, 1, -65528, 1, -65527, 1, -65526, 1, -65525, 1, -65524, 1, -65523, 1, -65522, 1, -65521, 1, -65520, 1, -65519, 1, -65518, 1, -65517, 1, -65516, 1, 65533, 0, 65534, 1, 65535, 1, 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1, 17, 1, 18, 1, 19, 1, 20, 1, 131069, 0, 131070, 1, 131071, 1, 65536, 1, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 65544, 0, 65545, 0, 65546, 0, 65547, 0, 65548, 0, 65549, 0, 65550, 0, 65551, 0, 65552, 0, 65553, 0, 65554, 0, 65555, 1, 65556, 1, 196605, 0, 196606, 1, 196607, 1, 131072, 1, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 1, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 0, 131084, 0, 131085, 0, 131086, 0, 131087, 0, 131088, 0, 131089, 0, 131090, 0, 131091, 1, 131092, 1, 262141, 0, 262142, 1, 262143, 1, 196608, 1, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 196619, 0, 196620, 0, 196621, 0, 196622, 0, 196623, 1, 196624, 0, 196625, 0, 196626, 0, 196627, 0, 196628, 0, 196629, 0, 196630, 0, 196631, 0, 196632, 0, 196633, 0, 196634, 0, 327677, 0, 327678, 1, 327679, 1, 262144, 1, 262145, 0, 262146, 0, 262147, 1, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 262155, 0, 262156, 0, 262157, 0, 262158, 0, 262159, 1, 262160, 0, 262161, 0, 262162, 0, 262163, 0, 262164, 0, 262165, 0, 262166, 0, 262167, 0, 262168, 0, 262169, 0, 262170, 0, 393213, 0, 393214, 1, 393215, 1, 327680, 1, 327681, 0, 327682, 0, 327683, 1, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 1, 327696, 0, 327697, 0, 327698, 0, 327699, 0, 327700, 0, 327701, 0, 327702, 0, 327703, 0, 327704, 0, 327705, 0, 327706, 0, 458749, 0, 458750, 1, 458751, 1, 393216, 1, 393217, 0, 393218, 0, 393219, 1, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 393232, 0, 393233, 0, 393234, 0, 393235, 1, 393236, 1, 393237, 0, 393238, 0, 393239, 0, 393240, 0, 393241, 0, 393242, 0, 524285, 0, 524286, 1, 524287, 1, 458752, 1, 458753, 0, 458754, 0, 458755, 0, 458756, 0, 458757, 0, 458758, 0, 458759, 0, 458760, 0, 458761, 0, 458762, 0, 458763, 0, 458764, 0, 458765, 0, 458766, 0, 458767, 0, 458768, 0, 458769, 0, 458770, 0, 458771, 1, 458772, 1, 589821, 0, 589822, 1, 589823, 1, 524288, 1, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 1, 524298, 1, 524299, 1, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 0, 524307, 1, 524308, 1, 655357, 0, 655358, 1, 655359, 1, 589824, 1, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 1, 589841, 0, 589842, 0, 589843, 1, 589844, 1, 720893, 0, 720894, 1, 720895, 1, 655360, 1, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 1, 655380, 1, 786429, 0, 786430, 1, 786431, 1, 720896, 1, 720897, 1, 720898, 1, 720899, 1, 720900, 0, 720901, 0, 720902, 0, 720903, 1, 720904, 1, 720905, 1, 720906, 1, 720907, 1, 720908, 1, 720909, 1, 720910, 1, 720911, 1, 720912, 1, 720913, 1, 720914, 1, 720915, 1, 720916, 1, 851965, 0, 851966, 1, 851967, 1, 786432, 1, 786433, 1, 786434, 1, 786435, 1, 786436, 0, 786437, 0, 786438, 0, 786439, 1, 786440, 1, 786441, 1, 786442, 1, 786443, 1, 786444, 1, 786445, 1, 786446, 1, 786447, 1, 786448, 1, 786449, 1, 786450, 1, 786451, 1, 786452, 1, 917502, 1, 917503, 1, 851968, 1, 851969, 1, 851970, 1, 851971, 1, 851972, 0, 851973, 0, 851974, 0, 851975, 1, 851976, 1, 851977, 1, 851978, 1, 851979, 1, 851980, 1, 851981, 1, 851982, 1, 917507, 0, 917508, 0, 917509, 0, 917510, 0, 917511, 0, 983043, 0, 983044, 0, 983045, 0, 983046, 0, 983047, 0, 1048579, 0, 1048580, 0, 1048581, 0, 1048582, 0, 1048583, 0 )

[node name="AP Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="Countdown" type="Timer" parent="."]

process_mode = 1
wait_time = 180.0
one_shot = false
autostart = true

[node name="GUI" type="Node2D" parent="."]

script/script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="GUI"]

transform/pos = Vector2( 640.427, 16.4944 )
transform/scale = Vector2( 65.4432, 0.687269 )
texture = ExtResource( 4 )

[node name="AP" type="Label" parent="GUI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Action Points:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Label" parent="GUI"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 600.0
margin/top = 0.0
margin/right = 689.0
margin/bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Upload:  0%"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="GUI/Timer"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="SquadGranade" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 285.267, 162.274 )
transform/scale = Vector2( 0.1, 0.1 )
stimpacks = 2

[node name="SquadTurret" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 422.558, 480.478 )
transform/scale = Vector2( 0.1, 0.1 )
life = 55

[node name="SquadShield" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 671.662, 226.237 )
transform/scale = Vector2( 0.1, 0.1 )
life = 40

[node name="data_nexus" type="Area2D" parent="." groups=[ "nexus" ]]

transform/pos = Vector2( 415.324, 286.164 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 9 )
life = 100

[node name="Sprite" type="Sprite" parent="data_nexus"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="data_nexus"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="enemy_spawn" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="enemy_pos1" type="Position2D" parent="."]

transform/pos = Vector2( 1661.02, 321.048 )

[node name="enemy_pos2" type="Position2D" parent="."]

transform/pos = Vector2( 357.778, 1035.24 )

[node name="win" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 279.0
margin/right = 1084.0
margin/bottom = 420.0
custom_fonts/font = SubResource( 4 )
text = "You Win :) !!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="loose" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 279.0
margin/right = 1084.0
margin/bottom = 420.0
custom_fonts/font = SubResource( 4 )
text = "You Loose :("
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="AP Timer" to="." method="_on_AP_Timer_timeout"]

[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]

[connection signal="timeout" from="GUI/Timer/Timer" to="GUI" method="_on_Timer_timeout"]

[connection signal="timeout" from="enemy_spawn" to="." method="_on_enemy_spawn_timeout"]


